src/objects/Header__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Interaction__c</fullName>
        <label>Easy Rest Send Interaction</label>
        <referenceTo>Send_Interaction__c</referenceTo>
        <relationshipLabel>Easy Rest Headers</relationshipLabel>
        <relationshipName>Easy_Rest_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Easy Rest Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Easy Rest Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Easy Rest Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>